--- a/ProyectoRom/Plantilla/Login1.html
+++ b/ProyectoRom/Plantilla/Login1.html
@@ -1,30 +1,23 @@
 
 
 
-
 {% extends 'Home.html' %}
 
-{% load static %}
+{%load static%}
 {% block ContendidoqueCambia%}
-<h1>Esto es lo que aparece en login </h1>
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-     content = "IE=edge">
-    <meta name ="viewport" content="width=device-width,
-    initial-scale=1.0">
-    <title> Formulario - Agregar Usuario </title>
- </head>
- <body>
-    <form action="/login/" method = "POST">
-    <p>Nombre: <input type = "text" name = "nombre"></p>
-    <p>Email: <input type = "text" name = "email"></p>
-    <p>Contra: <input type = "text" name = "contraseña"></p>
+<body>
+ 
+
+ {% if miForm.errors %}
+    <p style="color: red">Esta mal</p>
+ {% endif %}
+
+ <form  action= ""  method="POST" >{% csrf_token %}
+    <table>
+        {{ miForm.as_table }}
+    </table>
     <input type="submit" value="Enviar">
-    </form>
-    <h1>blublublu</h1>
- </body>
- </html>
+  </form>
+</body>
 {% endblock %}
+
