--- a/ProyectoRom/Plantilla/Roms.html
+++ b/ProyectoRom/Plantilla/Roms.html
@@ -1,6 +1,28 @@
 {% extends 'Home.html' %}
-
 {% load static %}
 {% block ContendidoqueCambia%}
-<h1> En esta pagina se verian las roms listas para descargar</h1>
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Document </title>
+</head>
+<body>
+    {% for p in roms %}
+    <li>{{ p }}</li>
+    {%endfor%}
+    
+
+
+</body>
+
+</html>
 {% endblock %}
+
+
+
